fix: dont include scroll width in calculations
otherwise all our "center" items change width
depending on if they are long enough to generate
a scrollbar on the right or not

--- a/style_generic.css
+++ b/style_generic.css
@@ -3,6 +3,11 @@
 	box-sizing: border-box;
 }
 
+/* Do not include scrollbar in width calculations */
+html {
+	width: 100vw;
+}
+
 body {
   font-size: 1.25em;
   font-family: "Helvetica", "Arial", sans-serif;
